--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ logs/
 /frontend/.next/
 /frontend/out/
 /frontend/build/
+/frontend/tsconfig.tsbuildinfo
 dist/
 build/
 
@@ -51,6 +52,5 @@ build/
 
 # Google Cloud
 service-account.json
-*json
 # GCP Service Account Key
 gcp-service-account-key.json
