--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [main, develop]
 
+permissions:
+  actions: read
+  contents: read
+  security-events: write
+
 jobs:
   frontend-test:
     runs-on: ubuntu-latest
